--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,27 +1,7 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+html, body {    
+  /* max-width: 100vw; */
+  min-height: 100vh;
+  overflow-x: hidden;     
 }
 
 * {
@@ -35,8 +15,30 @@ a {
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.container {
+  /* max-width: 1366px; */
+  /* width: 100%; */
+  min-height: 100vh;
+  /* margin: 0 auto;   */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 10px;
 }
+
+.main {
+  flex: 1;
+  padding: 0 300px;
+  margin: 5px;
+}
+
+.wrapper{
+  flex:1;
+  display: flex;
+  flex-direction: column;
+  margin-top: 100px;
+  
+}
+
+
+
