--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,22 +23,16 @@ a {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  gap: 10px;
+  gap: 0px;
+}
+
+.carousel{  
+  margin-top: 80px;  
 }
 
 .main {
   flex: 1;
   padding: 0 300px;
-  margin: 5px;
+  margin: 5px 5px;
+  text-align: justify;
 }
-
-.wrapper{
-  flex:1;
-  display: flex;
-  flex-direction: column;
-  margin-top: 100px;
-  
-}
-
-
-
