--- a/src/app/sandbox/globals.css
+++ b/src/app/sandbox/globals.css
@@ -7,20 +7,48 @@
 html {
   /* height: 100%; */
   background-color: bisque;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
 }
 
 body {
-  min-height: 100vh;
-  border: 1px solid ;
-  background-color:aqua;
-  width: 100%;
-  
+  /* min-height: 100vh; */
+  border: 1px solid;
+
+  /* background-color:aqua; */
+  /* width: 100%; */
 }
 
 .box {
-  height: 50%;
-  /* height: 100px; */
+  /* height: 50%; */
+  max-height: 100px;
   /* width: 25%; */
   background-color: brown;
+  overflow: hidden;
+}
+
+.img {
+  width: 100%;
+  height: 500px;
+  object-fit: cover;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 10px;
+  min-height: 100vh;
+}
+
+.main {
+  flex: 1;
+  padding: 0 300px;
+  margin: 5px;
+}
+
+.wrapper{
+  flex:1;
+  display: flex;
+  flex-direction: column;
+  margin-top: 70px;  
 }
