--- a/src/components/home/footer/footer.module.css
+++ b/src/components/home/footer/footer.module.css
@@ -1,5 +1,4 @@
-.container{
-  height: 150px;
+.container{  
   font-size: 14px;
   display: flex;  
   justify-content: space-between;
@@ -12,4 +11,5 @@
 .item {
   flex: 1;
   text-align: justify;
+  margin: 5px 5px;
 }
