--- a/src/components/home/slider/slider.module.css
+++ b/src/components/home/slider/slider.module.css
@@ -1,6 +1,37 @@
 .img {
-    width: 100%;
-    height: 300px;
-    object-fit: cover;
-  }
+  width: 100%;
+  padding: 0 300px;
+  height: 300px;
+  object-fit: cover;
+}
 
+.embla {
+  overflow: hidden;
+}
+
+.embla__container {
+  display: flex;
+}
+
+.embla__slide {
+  flex: 0 0 100%;
+  min-width: 0;
+}
+
+
+
+.navigator {
+  max-width: 100%;
+  margin: 0 auto;
+}
+
+
+.button {
+  padding: 20px;
+  cursor: pointer;
+  background-color: #53c28b;
+  border: none;
+  border-radius: 5px;
+  width: max-content;
+  color: white;
+}
