--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,7 @@ html, body {
   /* max-width: 100vw; */
   min-height: 100vh;
   overflow-x: hidden;     
+  font-size: 12px;
 }
 
 * {
@@ -17,22 +18,11 @@ a {
 
 .container {
   /* max-width: 1366px; */
-  /* width: 100%; */
   min-height: 100vh;
-  /* margin: 0 auto;   */
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   gap: 0px;
 }
 
-.carousel{  
-  margin-top: 80px;  
-}
 
-.main {
-  flex: 1;
-  padding: 0 300px;
-  margin: 5px 5px;
-  text-align: justify;
-}
