--- a/src/components/home/navbar/navbar.module.css
+++ b/src/components/home/navbar/navbar.module.css
@@ -19,6 +19,6 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    font-weight: bold;
+    font-weight: 400;
     font-size: 28px;
 }
